--- a/logstash-tlsnames.conf
+++ b/logstash-tlsnames.conf
@@ -1,6 +1,6 @@
 input {
   file {
-    path => "/tmp/tlsnames/test.json"
+    path => "/tmp/tlsnames"
     start_position => beginning
     sincedb_path => "/dev/null"
     ignore_older => 0
