--- a/logstash-tlsnames.conf
+++ b/logstash-tlsnames.conf
@@ -4,22 +4,19 @@ input {
     start_position => beginning
     sincedb_path => "/dev/null"
     ignore_older => 0
+    type => "tlsnames"
   }
 }
 
 filter {
+
+    if [type] == "tlsnames" {
+
     # Drop Elasticsearch Bulk API control lines
     if ([message] =~ "{\"index") {
         drop {}
     }
-
-    json {
-        source => "tlsnames"
-        #remove_field => "message"
-        #target => "test"
-    }
-
-    # Extract innermost network protocol
+    
     grok {
         patterns_dir => "/etc/logstash/patterns"
         match => { "message" => ["%{TLSNAMES}"] }
@@ -29,19 +26,31 @@ filter {
             drop {}
         }
 
-
     date {
         match => [ "timestamp", "UNIX_MS" ]
         remove_field => ["timestamp"]
     }
 
+  }
 }
 
 output {
+
+ if [type] == "tlsnames" {
       elasticsearch {
       index => "tlsnames-%{+YYYY.MM.dd}"
-      hosts => [ "1.2.3.4:9200" ]
+      hosts => [ "192.168.0.12:9200" ]
       user => username
       password => password
+      manage_template => true
+      template_overwrite => true
+      template => "/etc/logstash/templates/tlsnames.json"
+      template_name => "tlsnames"
       }
+  }
 }
+
+# For Debugging to console
+#output {
+#  stdout { codec => rubydebug }
+#}
